
2018-09-01  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* codegen.c (output_module_register_init): partially fix bug #548:
	  used previous reference creation for XML registers

2018-08-24  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* typeck.c (cb_build_cond): keep source-reference for trace/position
	  code generation and compiler messages
	* typeck.c (build_evaluate): store source-reference for WHEN OTHER
	* tree.c (copy_file_line): disabled save/restore source-reference
	  of expressions as the current code works identical without it
	* codegen.c (output_stmt): use source-reference of expression for
	  WHEN / WHEN OTHER, output its location to return correct position
	  for runtime messages and tracing

2018-08-21  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* parser.y: implemented MS-COBOL position-specifier for DISPLAY/ACCEPT
	  and DISPLAY ERASE
	* parser.y, reserved.c: added COMP-0 as PENDING
	* typeck.c: set reference for CRT-STATUS field on ACCEPT/DISPLAY
	  for cross-reference in listing

2018-08-19  Edward Hart <edward.dan.hart@gmail.com>

	* general: added XML GENERATE statement.
	* parser.y: added detection of XML PARSE statement.

2018-08-17  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* reserved.c: added COL/LIN registers (default to disabled)
	* typeck.c, parser.y, cobc.h, tree.c, tree.h, field.c: first approach
	  on generic register creation (currently works only for TALLY/COL/LIN)

2018-08-09  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	FR #219 Support for COMP-N (ACU compatibility)
	* parser.y, reserved.c: added COMP-N/COMPUTATIONAL-N
	* tree.h (cb_usage): new CB_USAGE_COMP_N
	* cobc.c, codegen.c, field.c, tree.c, typeck.c: identical handling
	  for CB_USAGE_COMP_N as CB_USAGE_COMP_X
	* field.c (setup_parameters): always use portable big-endian format
	  for CB_USAGE_COMP_N

2018-08-07  Brian Tiffin <btiffin@gnu.org>
