@@ -1,4 +1,9 @@
 
+2018-09-06  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
+
+	* typeck.c (validate_move): always check full length for VALUE
+	  without trimming the literal if alphanumeric
+
 2018-09-01  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
 
 	* codegen.c (output_module_register_init): partially fix bug #548:
